{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 117,
  "lineage": "2af2a0f6-b8da-134f-91cd-2fc7358e01fe",
  "resources": [
    {
      "module": "module.default",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "module.default.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:575108961200:instance/i-033647a8343f04c4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033647a8343f04c4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04bc847ba5e00596a",
            "private_dns": "ip-172-31-90-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.206",
            "public_dns": "ec2-44-211-142-221.compute-1.amazonaws.com",
            "public_ip": "44.211.142.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7f01c923aced0d6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0019a486ad9e03a16",
            "tags": {
              "Environment": "dev",
              "Name": "default",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "default",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6dd6854e00387d9"
            ]
          },
          "dependencies": [
            "module.default.aws_key_pair.example-ssh",
            "module.default.aws_security_group.example-sg",
            "module.default.data.template_file.init_script"
          ]
        }
      ]
    },
    {
      "module": "module.default",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-sg",
      "provider": "module.default.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108961200:security-group/sg-0d6dd6854e00387d9",
            "description": "Security gruop allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6dd6854e00387d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-sg",
            "name_prefix": "",
            "owner_id": "575108961200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "default-sg",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "default-sg",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0125d153d70ae33b5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sql_injection",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "module.sql_injection.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:575108961200:instance/i-0ad41657df17f8627",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad41657df17f8627",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sql_injection",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c1735e933d0f123",
            "private_dns": "ip-172-31-92-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.200",
            "public_dns": "ec2-44-203-197-161.compute-1.amazonaws.com",
            "public_ip": "44.203.197.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05599819def50a695",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sql_injection-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0019a486ad9e03a16",
            "tags": {
              "Environment": "dev",
              "Name": "sql_injection",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sql_injection",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063d93787d044df03"
            ]
          },
          "dependencies": [
            "module.sql_injection.aws_key_pair.example-ssh",
            "module.sql_injection.aws_security_group.example-sg",
            "module.sql_injection.data.template_file.init_script"
          ]
        }
      ]
    },
    {
      "module": "module.sql_injection",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-sg",
      "provider": "module.sql_injection.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575108961200:security-group/sg-063d93787d044df03",
            "description": "Security gruop allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063d93787d044df03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sql_injection-sg",
            "name_prefix": "",
            "owner_id": "575108961200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sql_injection-sg",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sql_injection-sg",
              "Owner": "ja.arizag@uniandes.edu.co",
              "Project": "Tesis",
              "Team": "Security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0125d153d70ae33b5"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}